less/nav-scroll-core.less
//
// Nav scrollable Core
// --------------------------------------------------

.nav-scrollable,
div[data-nav-scroll="true"] {
    overflow: hidden;

    .nav {
        display: table;
        float: none;
        margin: 0;

        > li {
            display: table-cell;
            float: none;
            margin: 0;
            vertical-align: middle;
        }

        &.navbar-nav {
            > li {
                > a {
                    padding-top: @navbar-padding-vertical;
                    padding-bottom: @navbar-padding-vertical;
                }
            }
        }
    }

    > .nav {
        overflow: hidden;
    }
}

.nav-scrollable {
    padding: 0 28px;
    position: relative;
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;

    .nav-scrollable-menu {
        position: absolute;
        display: inline-block;
        z-index: 1;
        top: 0;
        padding: @nav-link-padding;
        height: 100%;
        padding-left: @nav-scrollable-menu-padding-horizontal;
        padding-right: @nav-scrollable-menu-padding-horizontal;
        opacity: @nav-scrollable-menu-disabled-opacity;
        .transition(@nav-scroll-btn-transition);

        &.nav-scrollable-prev {
            left: 0;
        }

        &.nav-scrollable-next {
            right: 0;
        }

        > span {
            vertical-align: baseline;
        }
    }

    .hammer-scrollbar {
        margin: 0;

        + .hammer-scroll-content .nav:not(.navbar-nav) {
            margin-bottom: 5px;
        }
    }

    .hammer-scrollbar.hammer-scroll-inverse {
        + .hammer-scroll-content .nav:not(.navbar-nav) {
            margin-top: 5px;
            margin-bottom: 0;
        }
    }

    &.is-nav-tabs {
        & + .panel,
        & + .tab-content > .tab-pane > .panel {
            &,
            > .panel-heading,
            > .panel-body,
            > .panel-footer {
                .border-top-radius(0);
            }
        }
    }

    &.is-nav-pills {
        margin-bottom: 10px;

        .nav-scrollable-menu {
            .border-top-radius(@nav-pills-border-radius);
            .border-bottom-radius(@nav-pills-border-radius);
        }
    }

    &.nav-scrollable-has-previous .nav-scrollable-prev,
    &.nav-scrollable-has-next .nav-scrollable-next {
        opacity: 1;
        cursor: pointer;

        &:hover {
            background-color: @nav-link-hover-bg;
        }
    }

    &:not(.nav-scrollable-has-previous):not(.nav-scrollable-has-next) {
        .nav-scrollable-menu {
            opacity: 0;
            z-index: 0;
        }
    }
}

.navbar {
    .nav-scrollable {
        .nav-scrollable-menu {
            line-height: @navbar-height;
            padding-top: 0;
            padding-bottom: 0;
        }
    }
}

.navbar-inverse {
    .nav-scrollable {
        .nav-scrollable-menu {
            color: @navbar-inverse-link-color;
        }

        &.nav-scrollable-has-previous .nav-scrollable-prev,
        &.nav-scrollable-has-next .nav-scrollable-next {
            &:hover,
            &:focus {
                color: @navbar-inverse-link-hover-color;
                background-color: @navbar-inverse-link-hover-bg;
            }

            &:active {
                color: @navbar-inverse-link-active-color;
                background-color: @navbar-inverse-link-active-bg;
            }
        }
    }
}


// Responsive
// -------------------------

@media (max-width: @screen-xs-max) {
    .navbar.has-nav-scrollable {
        .navbar-header {
            float: left;
        }
    }

    .nav-scrollable {
        .navbar-nav {
            > li {
                > a {
                    padding-left: 5px;
                    padding-right: 5px;
                }
            }
        }
    }
}

